<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScreenMainLayout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton style="@style/ImageNavButton"
            android:id="@+id/back_button"
            android:contentDescription="@string/return_button_description"/>

        <TextView style="@style/TopNavTextStyle"
            android:text="@string/settings_screen_title"/>
    </FrameLayout>

    <FrameLayout
        style="@style/SettingFramelayoutStyle"
        android:layout_marginTop="80dp">

        <TextView style="@style/SettingsTextStyle"
            android:text="@string/settings_daynight_string"/>

        <Switch
            style="@style/SwitchSettingsStyle"/>
    </FrameLayout>

    <FrameLayout
        style="@style/SettingFramelayoutStyle">

        <TextView style="@style/SettingsTextStyle"
            android:text="@string/settings_shareapp_string"/>

        <ImageButton style="@style/ImageSettingsButton"
            android:id="@+id/shareAppButton"
            android:contentDescription="@string/shareapp_button_description"
            android:src="@drawable/shareapp_vector" />
    </FrameLayout>

    <FrameLayout
        style="@style/SettingFramelayoutStyle">

        <TextView style="@style/SettingsTextStyle"
            android:text="@string/settings_support_string"/>

        <ImageButton style="@style/ImageSettingsButton"
            android:id="@+id/contactSupportButton"
            android:contentDescription="@string/customer_support_button_description"
            android:src="@drawable/customer_support_vector" />
    </FrameLayout>

    <FrameLayout
        style="@style/SettingFramelayoutStyle">

        <TextView style="@style/SettingsTextStyle"
            android:text="@string/user_agreement_string"/>

        <ImageButton style="@style/ImageSettingsButton"
            android:id="@+id/UserAgreementButton"
            android:contentDescription="@string/user_agreement_button_description"
            android:src="@drawable/user_agreement_vector" />
    </FrameLayout>

</LinearLayout>