<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/main_layout_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="17dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/search_button"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:icon="@drawable/search_vector"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/media_button"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:icon="@drawable/media_vector"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/settings_button"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:icon="@drawable/settings_vector"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/black" />

    </LinearLayout>

</LinearLayout>
